syntax = "proto3";

option csharp_namespace = "VehicleRegistrationService";

package vehicleinfo;

service VehicleInfo {
  rpc GetVehicleInfo (VehicleInfoRequest) returns (VehicleInfoReply);
}

message VehicleInfoRequest {
  string licenseNumber = 1;
}

message VehicleInfoReply {
  string vehicleId = 1;
  string brand = 2;
  string model = 3;
  string ownerName = 4;
  string ownerEmail = 5;
}